tests/test_assets/semantic/invalid/control_flow/unreachable_after_if.cog
unreachable_after_if::(b: bool) -> i32 {
    if b {
        return 1;
    } else {
        return 2;
    }

    x := 3;
}
