tests/test_assets/semantic/invalid/control_flow/unreachable_after_if.expected
semantic error at line 8: unreachable statement
1 semantic error generated.
